// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`output-file-interpolation > should interpolate placeholders when running ng lint without project name (all projects) 1`] = `
{
  "app-one": [
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.config.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.routes.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.spec.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/index.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/main.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
  ],
  "app-two": [
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.config.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.routes.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.spec.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/index.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/main.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
  ],
  "lib-one": [
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/lib/lib-one.spec.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/lib/lib-one.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/public-api.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
  ],
  "output-file-interpolation": [
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/app/app.config.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/app/app.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/app/app.routes.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/app/app.spec.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/app/app.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/index.html",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
    {
      "errorCount": 0,
      "fatalErrorCount": 0,
      "filePath": "__ROOT__/output-file-interpolation/src/main.ts",
      "fixableErrorCount": 0,
      "fixableWarningCount": 0,
      "messages": [],
      "suppressedMessages": [],
      "usedDeprecatedRules": [],
      "warningCount": 0,
    },
  ],
}
`;

exports[`output-file-interpolation > should support dynamic override of outputFile with placeholder interpolation 1`] = `
[
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.config.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.html",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.routes.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.spec.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/app/app.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/index.html",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-two/src/main.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
]
`;

exports[`output-file-interpolation > should write lint reports to interpolated paths for projects with outputFile configuration with known placeholders 1`] = `
[
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.config.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.html",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.routes.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.spec.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/app/app.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/index.html",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/app-one/src/main.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
]
`;

exports[`output-file-interpolation > should write lint reports to interpolated paths for projects with outputFile configuration with known placeholders 2`] = `
[
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/lib/lib-one.spec.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/lib/lib-one.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
  {
    "errorCount": 0,
    "fatalErrorCount": 0,
    "filePath": "__ROOT__/output-file-interpolation/projects/lib-one/src/public-api.ts",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [],
    "suppressedMessages": [],
    "usedDeprecatedRules": [],
    "warningCount": 0,
  },
]
`;
